# tui-base-framework

./: .gitignore  AGENTS.md  CHEATSHEET.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  async_task.rs  counter.rs  focus.rs  hello_world.rs  inline.rs  layout_demo.rs  list_selector.rs  mouse.rs  progress.rs  screens.rs  tabs.rs  text_input.rs
src/: app.rs  component.rs  event.rs  examples.rs  lib.rs  main.rs  message.rs  terminal.rs
src/examples/: counter.rs  hello_world.rs  layout_demo.rs  list_selector.rs  progress.rs  tabs.rs  text_input.rs
src/tui/: app.rs  component.rs  event.rs  mod.rs  terminal.rs
