[package]
name = "tui-base-framework"
version = "0.1.0"
edition = "2024"
authors = ["binbandit <crazywolf132@gmail.com>"]
description = "A fast, extensible TUI template built with Ratatui and Tokio"
license = "MIT OR Apache-2.0"
repository = "https://github.com/binbandit/tui-base-framework"
homepage = "https://github.com/binbandit/tui-base-framework"
readme = "README.md"
keywords = ["tui", "terminal", "ratatui", "template", "component"]
categories = ["command-line-interface", "asynchronous"]
rust-version = "1.94"

# --- template setup ---------------------------------------------------------
# Run ./setup.sh <your-app-name> to make this project yours: it renames the
# crate everywhere, fills in your author info, and can strip the examples
# (--no-examples) or fold the framework into a binary-only app (--app-only).
# This comment block is removed automatically by the script.
# ----------------------------------------------------------------------------

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "layout-cache", "underline-color"] }
crossterm = "0.29"
tokio = { version = "1.52", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1.0"

# Ctrl-Z suspend needs to raise SIGTSTP; there is no way to do that from std
# without `unsafe`, which this crate forbids.
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4", default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
